Fixed nav position on smaller screen

--- a/css/style.scss
+++ b/css/style.scss
@@ -74,11 +74,19 @@ body {
 }
 
 .sidebar,
-main {
+.main {
 	border: 1px solid blue;
 }
 
-/* Sidebar */
+/* Sidebar & Main*/
+.sidebar {
+	flex: 0 0 0%;
+	position: relative;
+}
+.main {
+	flex: 0 0 90%;
+}
+
 /** Logo **/
 .sidebar__logo {
 	display: grid;
@@ -93,10 +101,12 @@ main {
 	font-weight: 500;
 	text-transform: uppercase;
 
-	height: 100%;
+	height: 100vh;
 	display: grid;
 	place-content: center;
 	margin-top: -8em;
+
+	position: relative;
 
 	li {
 		line-height: 3em;
